--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="text-center">
     <button id="harnessButton" style="background-color: #0092E4; color: white;">Harness</button>
-    <p id="displayText" style="display: none;">The Modern Software Delivery Platform®</p>
+    <p id="displayText" style="display: none;">The Intelligent Modern Software Delivery Platform®</p>
 </div>
 
 @section Scripts {
